Created validation method for User Search

--- a/meeting_client/app/src/main/res/layout/content_user_search.xml
+++ b/meeting_client/app/src/main/res/layout/content_user_search.xml
@@ -9,7 +9,7 @@
     tools:showIn="@layout/activity_user_search">
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/textInputSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -37,7 +37,8 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/textInputSearch"
+        android:onClick="submitSearchRequest"/>
 
     <ListView
         android:id="@+id/search_results"
