--- a/meeting_client/app/src/main/res/layout/content_event_details.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_details.xml
@@ -188,6 +188,12 @@
                     android:layout_weight="1"/>
             </LinearLayout>
 
+            <Button
+                android:id="@+id/suggest_location_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Suggest a Location" />
+
         </LinearLayout>
     </ScrollView>
 
