--- a/meeting_client/app/src/main/res/layout/activity_password_reset_code.xml
+++ b/meeting_client/app/src/main/res/layout/activity_password_reset_code.xml
@@ -53,10 +53,16 @@
             android:id="@+id/confirm"
             android:layout_width="125dp"
             android:layout_height="66dp"
+            android:layout_marginStart="143dp"
+            android:layout_marginTop="511dp"
             android:text="CONFIRM"
             android:textSize="20dp"
-            tools:layout_editor_absoluteX="143dp"
-            tools:layout_editor_absoluteY="511dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/token_layout"
