--- a/meeting_client/app/src/main/res/layout/content_event_details.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_details.xml
@@ -208,6 +208,12 @@
                 android:layout_height="wrap_content"
                 android:text="Suggest a Location" />
 
+            <Button
+                android:id="@+id/map_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Map" />
+
         </LinearLayout>
     </ScrollView>
 
