--- a/meeting_client/app/src/main/res/layout/content_event_details.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_details.xml
@@ -212,7 +212,7 @@
                 android:id="@+id/map_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Map" />
+                android:text="@string/map" />
 
         </LinearLayout>
     </ScrollView>
