--- a/meeting_client/app/src/main/res/layout/content_event_edition.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_edition.xml
@@ -161,6 +161,12 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
+                    android:id="@+id/suggested_locations_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/suggested" />
+
+                <Button
                     android:id="@+id/add_users_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
