--- a/meeting_client/app/src/main/res/layout/content_event_creation.xml
+++ b/meeting_client/app/src/main/res/layout/content_event_creation.xml
@@ -49,7 +49,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/date"
+                android:hint="@string/date_format"
                 android:inputType="date" />
         </android.support.design.widget.TextInputLayout>
 
@@ -64,7 +64,7 @@
 
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/time"
+                android:hint="@string/time_format"
                 android:inputType="time" />
         </android.support.design.widget.TextInputLayout>
 
@@ -77,7 +77,8 @@
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/duration" />
+                android:hint="@string/duration_format"
+                android:inputType="time" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
