--- a/meeting_client/app/src/main/res/layout/content_profile_edition.xml
+++ b/meeting_client/app/src/main/res/layout/content_profile_edition.xml
@@ -118,7 +118,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/confirm"
-            android:onClick="sendProfileEditionRequest"/>
+            android:text="@string/confirm" />
     </LinearLayout>
 </ScrollView>
