--- a/meeting_client/app/src/main/res/layout/content_profile_edition.xml
+++ b/meeting_client/app/src/main/res/layout/content_profile_edition.xml
@@ -24,6 +24,7 @@
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/thisisatest"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/first_name"
