--- a/meeting_client/app/src/main/res/layout/content_user_search.xml
+++ b/meeting_client/app/src/main/res/layout/content_user_search.xml
@@ -37,8 +37,7 @@
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputSearch"
-        android:onClick="submitSearchRequest"/>
+        app:layout_constraintTop_toBottomOf="@+id/textInputSearch"/>
 
     <ListView
         android:id="@+id/search_results"
