--- a/meeting_client/app/src/main/res/layout/content_user_search.xml
+++ b/meeting_client/app/src/main/res/layout/content_user_search.xml
@@ -39,17 +39,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputSearch"/>
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/search_results"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="393dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:visibility="invisible"
+        android:layout_margin="8dp"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_users" />
+        app:layout_constraintTop_toBottomOf="@+id/search_users"/>
+
 </android.support.constraint.ConstraintLayout>
