--- a/meeting_client/app/src/main/res/layout/content_user_search.xml
+++ b/meeting_client/app/src/main/res/layout/content_user_search.xml
@@ -30,9 +30,7 @@
         android:id="@+id/search_users"
         android:layout_width="125dp"
         android:layout_height="66dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_margin="8dp"
         android:text="@string/search"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,13 +39,14 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/search_results"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_margin="8dp"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_users"/>
+        android:layout_height="529dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:scrollbars="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/search_users"
+        tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
