--- a/meeting_client/app/src/main/res/layout/activity_maps.xml
+++ b/meeting_client/app/src/main/res/layout/activity_maps.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
@@ -11,33 +9,23 @@
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        tools:openDrawer="end">
 
-        <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
-        <FrameLayout
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:context=".MapsActivity" />
 
-            <android.support.design.widget.CoordinatorLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <fragment
-                    android:id="@+id/map"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:context=".MapsActivity" />
-
-                <include layout="@layout/eta_bottomsheet_layout"></include>
-
-            </android.support.design.widget.CoordinatorLayout>
-
-        </FrameLayout>
-
-        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/eta_list"
+            android:layout_width="250dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:background="@android:color/background_light"
+            tools:listitem="@layout/list_item_eta" />
 
     </android.support.v4.widget.DrawerLayout>
-
 
 </android.support.design.widget.CoordinatorLayout>
