--- a/meeting_client/app/src/main/res/layout/content_attendee_list.xml
+++ b/meeting_client/app/src/main/res/layout/content_attendee_list.xml
@@ -21,14 +21,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/save_button"
+        android:id="@+id/close_button"
         android:layout_width="234dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="56dp"
-        android:text="@string/save_changes"
+        android:text="@string/close"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
