more states betterer

--- a/meeting_client/app/src/main/res/layout/active_status.xml
+++ b/meeting_client/app/src/main/res/layout/active_status.xml
@@ -5,7 +5,6 @@
     android:id="@+id/active_status_container"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:animateFirstView="true"
     android:inAnimation="@anim/status_in"
     android:outAnimation="@anim/status_out"
     tools:showIn="@layout/content_event_details">
@@ -271,6 +270,29 @@
             android:text="@string/status_action_arrivehome"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/active_status_over"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorAccent">
+
+        <TextView
+            android:id="@+id/over_status_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/status_text_over"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 </ViewAnimator>
