--- a/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
+++ b/meeting_client/app/src/main/res/layout/activity_add_usersto_meeting.xml
@@ -53,7 +53,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@android:drawable/dialog_holo_light_frame"
-            android:hint="Enter an Email"
+            android:hint="Search for a User"
             android:inputType="textEmailAddress" />
 
 
