--- a/meeting_client/app/src/main/res/layout/activity_password_reset2.xml
+++ b/meeting_client/app/src/main/res/layout/activity_password_reset2.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/uuid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="UID" />
+                android:hint="@string/uid" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
@@ -54,8 +54,8 @@
             android:layout_marginStart="143dp"
             android:layout_marginEnd="143dp"
             android:layout_marginBottom="50dp"
-            android:text="CONFIRM"
-            android:textSize="20dp"
+            android:text="@string/confirm"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -78,7 +78,7 @@
                 android:id="@+id/token"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Token" />
+                android:hint="@string/token" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -99,7 +99,7 @@
                 android:id="@+id/confirm_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Confirm New Password" />
+                android:hint="@string/confirm_new_password" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -119,7 +119,7 @@
                 android:id="@+id/new_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="New Password" />
+                android:hint="@string/new_password" />
         </android.support.design.widget.TextInputLayout>
 
     </android.support.constraint.ConstraintLayout>
