--- a/meeting_client/app/src/main/res/menu/menu_debug_launcher.xml
+++ b/meeting_client/app/src/main/res/menu/menu_debug_launcher.xml
@@ -12,4 +12,7 @@
     <item
         android:id="@+id/locserv_stop"
         android:title="@string/stop_locationupdateservice" />
+    <item
+        android:id="@+id/logout"
+        android:title="@string/logout" />
 </menu>
