--- a/meeting_client/app/src/main/res/layout/content_location_suggestion.xml
+++ b/meeting_client/app/src/main/res/layout/content_location_suggestion.xml
@@ -18,7 +18,7 @@
         app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
-
+            android:id="@+id/suggest_edit_street_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/street_address"
@@ -39,7 +39,7 @@
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
-
+                android:id="@+id/suggest_edit_city"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/city"
@@ -54,7 +54,7 @@
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
-
+                android:id="@+id/suggest_edit_state"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/state"
@@ -71,7 +71,7 @@
         app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
-
+            android:id="@+id/suggest_edit_room_no"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/room_no_opt"
